[package]
name = "rsc-client"
version = "0.0.1"
authors = ["Zach Knight <zach.knight@protonmail.com>"]
edition = "2018"
description = "Extension to a javascript RuneScape Classic port."
license = "ISC"
repository = "github.com/spkaeros/rsc-client"

[lib]
crate-type = ["cdylib"]
path = "./src/rustlib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
