[package]
name = "librsc"
version = "0.1.1"
authors = ["Zach Knight <zach@rsclassic.dev>"]
edition = "2018"
description = "Extension to a javascript RuneScape Classic port."
license = "ISC"
repository = "github.com/spkaeros/rsc-client"

[lib]
crate-type = ["cdylib"]
path = "./src/rustlib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

#[profile.release]
#lto = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
